[gd_scene load_steps=19 format=2]

[ext_resource path="res://Art/Fantasy RPG NPCs - Individuel Frames/Knight - Standard/Knight_Idle_2.png" type="Texture" id=1]
[ext_resource path="res://Art/Fantasy RPG NPCs - Individuel Frames/Knight - Standard/Knight_Walk_1.png" type="Texture" id=2]
[ext_resource path="res://Art/Fantasy RPG NPCs - Individuel Frames/Knight - Standard/Knight_Walk_2.png" type="Texture" id=3]
[ext_resource path="res://Art/Fantasy RPG NPCs - Individuel Frames/Knight - Standard/Knight_Walk_3.png" type="Texture" id=4]
[ext_resource path="res://Art/Fantasy RPG NPCs - Individuel Frames/Knight - Standard/Knight_Idle_1.png" type="Texture" id=5]
[ext_resource path="res://Art/Fantasy RPG NPCs - Individuel Frames/Knight - Standard/Knight_Idle_3.png" type="Texture" id=6]
[ext_resource path="res://Art/Fantasy RPG NPCs - Individuel Frames/Knight - Standard/Knight_Idle_4.png" type="Texture" id=7]
[ext_resource path="res://Art/Fantasy RPG NPCs - Individuel Frames/Knight - Standard/Knight_Walk_4.png" type="Texture" id=8]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=9]
[ext_resource path="res://Art/attackanim/4.PNG" type="Texture" id=10]
[ext_resource path="res://Art/attackanim/5.PNG" type="Texture" id=11]
[ext_resource path="res://Art/attackanim/1.PNG" type="Texture" id=12]
[ext_resource path="res://Art/attackanim/2.PNG" type="Texture" id=13]
[ext_resource path="res://Art/attackanim/3.PNG" type="Texture" id=14]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 1 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 8 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7, 9 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 6.0
height = 4.0

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "attack",
"speed": 15.0
} ]

[node name="Player" type="KinematicBody2D"]
collision_layer = 3
script = ExtResource( 9 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -16 )
frames = SubResource( 1 )
animation = "walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -9 )
shape = SubResource( 2 )

[node name="CombatArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CombatArea"]
position = Vector2( 14, -9 )
shape = SubResource( 3 )

[node name="AttackSprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 14, -9 )
scale = Vector2( 0.00961304, 0.0109558 )
frames = SubResource( 4 )
animation = "attack"
frame = 1

[node name="HealthBar" type="ColorRect" parent="."]
margin_left = -13.0
margin_top = -25.0
margin_right = 12.0
margin_bottom = -20.0
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
